--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -43,3 +43,4 @@ set(GR_TEST_TARGET_DEPS gnuradio-oqpsk)
 set(GR_TEST_PYTHON_DIRS ${CMAKE_BINARY_DIR}/swig)
 GR_ADD_TEST(qa_pfb_oqpsk_clock_sync_cc ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_pfb_oqpsk_clock_sync_cc.py)
 GR_ADD_TEST(qa_oqpsk_phase_sync_cc ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_oqpsk_phase_sync_cc.py)
+GR_ADD_TEST(qa_oqpsk_phase_clock_est_cc ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_oqpsk_phase_clock_est_cc.py)
